; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_eventfd.c_eventfd_fget.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_eventfd.c_eventfd_fget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32* }

@EBADF = common dso_local global i32 0, align 4
@eventfd_fops = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.file* @eventfd_fget(i32 %0) #0 {
  %2 = alloca %struct.file*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.file*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call %struct.file* @fget(i32 %5)
  store %struct.file* %6, %struct.file** %4, align 8
  %7 = load %struct.file*, %struct.file** %4, align 8
  %8 = icmp ne %struct.file* %7, null
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @EBADF, align 4
  %11 = sub nsw i32 0, %10
  %12 = call %struct.file* @ERR_PTR(i32 %11)
  store %struct.file* %12, %struct.file** %2, align 8
  br label %26

13:                                               ; preds = %1
  %14 = load %struct.file*, %struct.file** %4, align 8
  %15 = getelementptr inbounds %struct.file, %struct.file* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = icmp ne i32* %16, @eventfd_fops
  br i1 %17, label %18, label %24

18:                                               ; preds = %13
  %19 = load %struct.file*, %struct.file** %4, align 8
  %20 = call i32 @fput(%struct.file* %19)
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  %23 = call %struct.file* @ERR_PTR(i32 %22)
  store %struct.file* %23, %struct.file** %2, align 8
  br label %26

24:                                               ; preds = %13
  %25 = load %struct.file*, %struct.file** %4, align 8
  store %struct.file* %25, %struct.file** %2, align 8
  br label %26

26:                                               ; preds = %24, %18, %9
  %27 = load %struct.file*, %struct.file** %2, align 8
  ret %struct.file* %27
}

declare dso_local %struct.file* @fget(i32) #1

declare dso_local %struct.file* @ERR_PTR(i32) #1

declare dso_local i32 @fput(%struct.file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
